welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: value += is not a member of Int
			i += 1
                          ^